# life-log-sync

./: .gitignore  AGENTS.md  LICENSE  README.md  config.example.toml  pyproject.toml
docs/: architecture.md  metrics.md
ingest/: activities.py  cli.py  config.py  context.py
ingest/sources/: hevy.py  withings.py
life_log_sync/: app_data.py  cli.py  config.py  context.py
life_log_sync/sources/: withings.py
scripts/: strava_sync.py
tests/: test_cli.py  test_config.py  test_context.py  test_hevy.py  test_withings.py
