[project]
name = "ingest"
version = "0.1.0"
description = "Collect and render personal data for AI-assisted self-review."
authors = [{ name = "iomz" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "playwright>=1.56,<2",
    "requests>=2.32,<3",
]

[project.scripts]
ingest = "ingest.cli:main"

[tool.poetry]
packages = [{ include = "ingest" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = ">=9.0.3,<10.0.0"
